# chipcraft-toolchain

./: LICENSE  Makefile.am  README  bootstrap  configure.ac
m4/: ax_chipcraft_arg_default_var.m4  ax_chipcraft_check_dependency.m4  ax_chipcraft_prog_version_path_error.m4  ax_silent_mode.m4  ax_with_curses.m4
resources/: centos6.ct-ng.config.chipcraft.windows.mips  ct-ng.config.chipcraft.windows
resources/configs/: host.in  mips-linux.in  mips-windows.in  mips.in  riscv.in
resources/misc/: ssh.config.github  ssh.config.local
resources/scripts/: git-check  git-repo-version  ubuntu-setup
